[gd_scene load_steps=2 format=3 uid="uid://bdkvela5v12pp"]

[ext_resource type="Script" uid="uid://7y7tdg3r44ov" path="res://Scenes/pause_menu.gd" id="1_lj4oq"]

[node name="PauseMenu" type="Control"]
process_mode = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_lj4oq")

[node name="Dimmer" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.71300006)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="CenterContainer"]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="CenterContainer/Panel"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ResumeButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Resume"

[node name="SaveButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Save"

[node name="CharacterSelectButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Character / Partner"

[node name="DigimonIndexButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Digimon Index"

[node name="QuitButton" type="Button" parent="CenterContainer/Panel/VBox"]
layout_mode = 2
text = "Quit to Title"
